Problem with the z-index solvet

--- a/app/[locale]/(platform)/_components/Projects/ProjectsCard/ProjectsCardComponent.scss
+++ b/app/[locale]/(platform)/_components/Projects/ProjectsCard/ProjectsCardComponent.scss
@@ -37,7 +37,7 @@
       backdrop-filter: blur(3px);
       border-radius: 15px 15px 0 0;
       top: 0;
-      z-index: 4;
+      z-index: 1;
       height: 15%;
       width: 100%;
       transition: opacity 0.3s ease-in-out;
